--- a/wp-content/themes/bookstore-theme/src/styles/main.scss
+++ b/wp-content/themes/bookstore-theme/src/styles/main.scss
@@ -1,7 +1,9 @@
 // Base Styles
 @use 'base/reset';
+@use 'base/variables';
 @use 'base/globals';
 @use 'base/themes';
+@use 'base/fonts';
 
 // BEM Modules
 @use 'modules/hero';
